--- a/data/Config.json
+++ b/data/Config.json
@@ -1,7 +1,7 @@
 {
-    "Token": "1292002537:AAHijHPk-3WtO",
-    "TelegramBotLink": "https://t.me/bot",
-    "LocalHostPort": "127.0.0.1:3333",
-    "Password": "Sial",
+    "Token": "1292002537:AAHijHPk-3WtOT8N1JtNLh1Ze9p_teHURi0",
+    "TelegramBotLink": "https://t.me/IDONTUSERbot",
+    "LocalHostPort": "127.0.0.1:80",
+    "Password": "Sialum",
     "PortWeb": "3333"
    }
