--- a/data/Config.json
+++ b/data/Config.json
@@ -1,6 +1,6 @@
 {
-    "Token": "1292002537:AAHijHPk-3WtOT8N1JtNLh1Ze9p_teHURi0",
-    "TelegramBotLink": "https://t.me/IDONTUSERbot",
+    "Token": "1292002537:AAHijHPk-3WtOT8N1JtNL",
+    "TelegramBotLink": "https://t.me/I",
     "LocalHostPort": "127.0.0.1:80",
     "Password": "Sialum",
     "PortWeb": "3333"
